atliktos 5_paskaitos uzduotys (reikia tvarkyti css)

--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -25,9 +25,8 @@
                     </div>
                     <ul>
                         <li><a href="{% url 'index' %}" data-after="Home">Home</a></li>
-                        <li><a href="#" data-after="Empty">Empty</a></li>
-                        <li><a href="#" data-after="Empty">Empty</a></li>
-                        <li><a href="#" data-after="Empty">Empty</a></li>
+                        <li><a href="{% url 'cars' %}" data-after="Cars">Cars</a></li>
+                        <li><a href="{% url 'orders' %}" data-after="Orders">Orders</a></li>
                     </ul>
                 </div>
             </div>
