atliktos 6_paskaitos uzduotys (vis dar reikia tvarkyti css)

--- a/mysite/autoservice/templates/index.html
+++ b/mysite/autoservice/templates/index.html
@@ -6,7 +6,7 @@
         <div>
               <ul>
                 <li><strong>Services: </strong>{{ num_services }}</li>
-                <li><strong>Status: </strong>{{ num_status }}</li>
+                <li><strong>Active status: </strong>{{ num_status }}</li>
                 <li><strong>Cars: </strong>{{ num_cars }}</li>
               </ul>
         </div>
