--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -27,6 +27,11 @@
                         <li><a href="{% url 'index' %}" data-after="Home">Home</a></li>
                         <li><a href="{% url 'cars' %}" data-after="Cars">Cars</a></li>
                         <li><a href="{% url 'orders' %}" data-after="Orders">Orders</a></li>
+                        <li>
+                            <form action="{% url 'search' %}" method="get" class="form-inline my-2 my-md-0">
+                            <input name="query" class="form-control" type="text" placeholder="Paieška">
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -37,27 +42,27 @@
 {% block content %}
 {% endblock %}
 </main>
-<footer>
-    <section id="footer">
-        <div class="footer container">
-            <div class="brand">
-                <h1><span>Auto</span>service</h1>
-            </div>
-            <div class="social-icon">
-                <div class="social-item">
-                    <a href="https://www.facebook.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/facebook-new.png" alt="icon" /></a>
-                </div>
-                <div class="social-item">
-                    <a href="https://www.instagram.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/instagram-new.png" alt="icon" /></a>
-                </div>
-                <div class="social-item">
-                    <a href="https://www.linkedin.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/linkedin.png" alt="icon" /></a>
-                </div>
-            </div>
-            <p>Copyright © 2021 All rights reserved.</p>
-        </div>
-    </section>
-</footer>
+<!--<footer>-->
+<!--    <section id="footer">-->
+<!--        <div class="footer container">-->
+<!--            <div class="brand">-->
+<!--                <h1><span>Auto</span>service</h1>-->
+<!--            </div>-->
+<!--            <div class="social-icon">-->
+<!--                <div class="social-item">-->
+<!--                    <a href="https://www.facebook.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/facebook-new.png" alt="icon" /></a>-->
+<!--                </div>-->
+<!--                <div class="social-item">-->
+<!--                    <a href="https://www.instagram.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/instagram-new.png" alt="icon" /></a>-->
+<!--                </div>-->
+<!--                <div class="social-item">-->
+<!--                    <a href="https://www.linkedin.com/" target=”_blank”><img src="https://img.icons8.com/ios-filled/30/000000/linkedin.png" alt="icon" /></a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <p>Copyright © 2021 All rights reserved.</p>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--</footer>-->
 <script type="text/javascript" src="{% static 'js/burger.js' %}"></script>
 </body>
 </html>
