--- a/mysite/autoservice/templates/cars.html
+++ b/mysite/autoservice/templates/cars.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% load static %}
   <section id="hero">
     <div class="hero container">
         <div>
@@ -10,11 +11,38 @@
           <br>
           {% for c in cars %}
             <ul>
-              <li><a href="{% url 'car' c.id %}">{{c.car_owner}} {{c.car_model}}</a></li>
+              <li>
+                  <a href="{% url 'car' c.id %}">{{c.car_model}}</a>
+                  {% if c.cover %}
+                    <img src="{{ c.cover.url }}" class="card-img-top" alt="...">
+                  {% else %}
+                    <img src="{% static 'img/no-img.jpg' %}" class="card-img-top">
+                  {% endif %}
+              </li>
             </ul>
           {% endfor %}
         </div>
     </div>
+    <div class="puslapiai">
+        <nav aria-label="...">
+            {% if cars.has_other_pages %}
+                <ul class="pagination pagination-sm justify-content-end">
+                    {% for i in cars.paginator.page_range %}
+                        {% if cars.number == i %}
+                            <li class="page-item active">
+                                <a class="page-link" href="">{{ i }}</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </nav>
+    </div>
+
   </section>
 
 {% endblock %}
