--- a/mysite/autoservice/templates/order_list.html
+++ b/mysite/autoservice/templates/order_list.html
@@ -1,22 +1,38 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <section id="hero">
+<section id="hero">
     <div class="hero container">
         <div>
-          <h1 style="color:white; font-size:7rem;">Orders</h1>
-          <br>
-          {% if order_list %}
+            <h1 style="color:white; font-size:7rem;">Orders</h1>
+            <br>
+            {% if order_list %}
             <ul>
                 {% for order in order_list %}
-                    <li><a href="{{ order.id }}">{{ order.car.owner }} {{ order.car.car_model }}</a></li>
+                <li><a href="{{ order.id }}">{{ order.car.owner }} {{ order.car.car_model }}</a></li>
                 {% endfor %}
             </ul>
             {% else %}
-                <p>No orders.</p>
+            <p>No orders.</p>
             {% endif %}
         </div>
     </div>
-  </section>
+    <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; pirmas</a>
+            <a href="?page={{ page_obj.previous_page_number }}">atgal</a>
+        {% endif %}
 
+        <span class="current">
+            {{ page_obj.number }} iš {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">pirmyn</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">paskutinis &raquo;</a>
+        {% endif %}
+    </span>
+    </div>
+</section>
 {% endblock %}
