--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -29,9 +29,20 @@
                         <li><a href="{% url 'orders' %}" data-after="Orders">Orders</a></li>
                         <li>
                             <form action="{% url 'search' %}" method="get" class="form-inline my-2 my-md-0">
-                            <input name="query" class="form-control" type="text" placeholder="Paieška">
+                                <input name="query" class="form-control" type="text" placeholder="Paieška">
                             </form>
                         </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="#">
+                            {{ user.get_username }}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">My orders</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next=/autoservice">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#">Registration</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -39,8 +50,8 @@
     </section>
 </header>
 <main>
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 </main>
 <!--<footer>-->
 <!--    <section id="footer">-->
