--- a/mysite/autoservice/templates/index.html
+++ b/mysite/autoservice/templates/index.html
@@ -8,6 +8,7 @@
                 <li><strong>Services: </strong>{{ num_services }}</li>
                 <li><strong>Active status: </strong>{{ num_status }}</li>
                 <li><strong>Cars: </strong>{{ num_cars }}</li>
+                <li><strong>You are visiting here for the </strong>{{ num_visits }}<strong> time</strong></li>
               </ul>
         </div>
     </div>
