--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -50,8 +50,12 @@
     </section>
 </header>
 <main>
-    {% block content %}
-    {% endblock %}
+    <section id="bg">
+        <div class="bg container">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </section>
 </main>
 <!--<footer>-->
 <!--    <section id="footer">-->
