--- a/mysite/autoservice/templates/cars.html
+++ b/mysite/autoservice/templates/cars.html
@@ -2,47 +2,34 @@
 
 {% block content %}
 {% load static %}
-  <section id="hero">
-    <div class="hero container">
-        <div>
-          <h1 style="color:white; font-size:7rem;">Cars</h1>
-          <br>
-          <p style="color:white; font-size:5rem;">All cars in our service:</p>
-          <br>
-          {% for c in cars %}
+<h1>All cars in our service</h1>
+<hr>
+<div>
+    {% for c in cars %}
+    <div class="card">
+        <a href="{% url 'car' c.id %}">{{c.car_model}} <span>{{c.year}} m.</span> </a>
+      {% if c.cover %}
+        <img src="{{ c.cover.url }}" alt="car photo">
+      {% else %}
+        <img src="{% static 'img/no-img.jpg' %}" class="card-img-top">
+      {% endif %}
+    </div>
+    {% endfor %}
+</div>
+<div>
+    <nav class="pages" aria-label="...">
+        {% if cars.has_other_pages %}
             <ul>
-              <li>
-                  <a href="{% url 'car' c.id %}">{{c.car_model}}</a>
-                  {% if c.cover %}
-                    <img src="{{ c.cover.url }}" class="card-img-top" alt="...">
-                  {% else %}
-                    <img src="{% static 'img/no-img.jpg' %}" class="card-img-top">
-                  {% endif %}
-              </li>
+                {% for i in cars.paginator.page_range %}
+                    {% if cars.number == i %}
+                        <li class="cur_page"><a href="">{{ i }}</a></li>
+                    {% else %}
+                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endif %}
+                {% endfor %}
             </ul>
-          {% endfor %}
-        </div>
-    </div>
-    <div class="puslapiai">
-        <nav aria-label="...">
-            {% if cars.has_other_pages %}
-                <ul class="pagination pagination-sm justify-content-end">
-                    {% for i in cars.paginator.page_range %}
-                        {% if cars.number == i %}
-                            <li class="page-item active">
-                                <a class="page-link" href="">{{ i }}</a>
-                            </li>
-                        {% else %}
-                            <li class="page-item">
-                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </nav>
-    </div>
-
-  </section>
+        {% endif %}
+    </nav>
+</div>
 
 {% endblock %}
