--- a/mysite/autoservice/templates/order_detail.html
+++ b/mysite/autoservice/templates/order_detail.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <section id="hero">
-    <div class="hero container">
-        <div>
-            <h1 style="color:white; font-size:7rem;">{{ order.car.owner }}</h1>
-            <br><hr><br>
-            <h4 style="color:white; font-size:3rem;"><strong>Date: &nbsp;</strong>{{ order.date }}</h4>
-            <h4 style="color:white; font-size:3rem;"><strong>Car: &nbsp;</strong>{{ order.car }}</h4>
-            <h4 style="color:white; font-size:3rem;"><strong>Status: &nbsp;</strong>{{ order.get_status_display }}</h4>
-            <br><hr><br>
-            {% for line in order.lines.all %}
-                <h2 style="color:white; font-size:2rem;">
-                    <strong>Service: &nbsp;</strong> {{ line.service.name }} |
-                    <strong>Price: &nbsp;</strong> {{ line.service.price }} |
-                    <strong>Quantity: &nbsp;</strong> {{ line.qty }} |
-                </h2>
-            {% endfor %}
-        </div>
-    </div>
-  </section>
+<h1>{{ order.car.owner }}</h1>
+<hr>
+
+<h2><strong>Date: &nbsp;</strong>{{ order.date }}</h2>
+<h2><strong>Car: &nbsp;</strong>{{ order.car }}</h2>
+<h2><strong>Status: &nbsp;</strong>{{ order.get_status_display }}</h2>
+<hr>
+{% for line in order.lines.all %}
+    <h3 style="color:white; font-size:2rem;">
+        <strong>Service: &nbsp;</strong> {{ line.service.name }} |
+        <strong>Price: &nbsp;</strong> {{ line.service.price }} |
+        <strong>Quantity: &nbsp;</strong> {{ line.qty }} |
+    </h3>
+{% endfor %}
 
 {% endblock %}
