--- a/mysite/autoservice/templates/order_list.html
+++ b/mysite/autoservice/templates/order_list.html
@@ -1,38 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section id="hero">
-    <div class="hero container">
-        <div>
-            <h1 style="color:white; font-size:7rem;">Orders</h1>
-            <br>
-            {% if order_list %}
+<h1>Orders</h1>
+<hr>
+<div class="orders">
+    {% if order_list %}
+    <ul>
+        {% for order in order_list %}
+        <li><a href="{{ order.id }}">{{ order.car.owner }} {{ order.car.car_model }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>No orders.</p>
+    {% endif %}
+</div>
+<div>
+    <nav class="pages" aria-label="...">
+        {% if page_obj.has_other_pages %}
             <ul>
-                {% for order in order_list %}
-                <li><a href="{{ order.id }}">{{ order.car.owner }} {{ order.car.car_model }}</a></li>
+                {% for i in page_obj.paginator.page_range %}
+                    {% if page_obj.number == i %}
+                        <li class="cur_page"><a href="">{{ i }}</a></li>
+                    {% else %}
+                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endif %}
                 {% endfor %}
             </ul>
-            {% else %}
-            <p>No orders.</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; pirmas</a>
-            <a href="?page={{ page_obj.previous_page_number }}">atgal</a>
         {% endif %}
+    </nav>
+</div>
 
-        <span class="current">
-            {{ page_obj.number }} iš {{ page_obj.paginator.num_pages }}
-        </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">pirmyn</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">paskutinis &raquo;</a>
-        {% endif %}
-    </span>
-    </div>
-</section>
 {% endblock %}
