--- a/mysite/autoservice/templates/car.html
+++ b/mysite/autoservice/templates/car.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 style="color:white; font-size:7rem;">Details </h1>
+  <h1>Details </h1>
   <hr>
     <ul class="details">
         <li><strong>Owner: &nbsp;</strong>{{car.owner}}</li>
