--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -35,8 +35,8 @@
                         {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="#">
                             {{ user.get_username }}</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">My orders</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next=/autoservice">Logout</a>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-orders'%}">My orders</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a>
