--- a/mysite/autoservice/templates/registration/login.html
+++ b/mysite/autoservice/templates/registration/login.html
@@ -14,20 +14,24 @@
 
 <form method="post" action="{% url 'login' %}">
   {% csrf_token %}
-  <table>
-    <tr>
-      <td>Username: </td>
-      <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-      <td>Password: </td>
-      <td>{{ form.password }}</td>
-    </tr>
-  </table>
-  <input type="submit" value="Login" />
-  <input type="hidden" name="next" value="{{ next }}" />
+  <div>
+    <table>
+      <tr>
+        <td class="td_name">Username: </td>
+        <td>{{ form.username }}</td>
+      </tr>
+      <tr>
+        <td class="td_name">Password: </td>
+        <td>{{ form.password }}</td>
+      </tr>
+    </table>
+  </div>
+  <div>
+    <input type="submit" value="Login" />
+    <input type="hidden" name="next" value="{{ next }}" />
+  </div>
 </form>
 
-<p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+<a href="{% url 'password_reset' %}" class="psw_link">Forgot your password?</a>
 
 {% endblock %}
