--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -46,7 +46,7 @@
               </svg>
             {{ user.get_username }}</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'my-orders' %}">My orders</a></li>
-
+            <li class="nav-item"><a class="nav-link" href="{% url 'new-order'%}?next=/library">New order</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Logout</a></li>
           {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
