--- a/mysite/autoservice/templates/order.html
+++ b/mysite/autoservice/templates/order.html
@@ -6,7 +6,7 @@
 
     <div class="container car">
         <h1><strong>Car: </strong>{{ order.car }}</h1>
-        <h1><strong>Due date: </strong>{{ order.due_date }}</h1>
+        <h1><strong>Due date: </strong>{{ order.due_back }}</h1>
     </div>
 
   <div style="margin-left:20px;margin-top:20px">
