--- a/mysite/autoservice/templates/cars.html
+++ b/mysite/autoservice/templates/cars.html
@@ -2,37 +2,41 @@
 
 {% block content %}
 {% load static %}
+<section style="max-height: 80vh;">
     <h1>All cars in our service</h1>
-    {% for car in cars %}
-    <div class="card mb-4 shadow-sm">
-        {% if car.cover %}
-          <img src="{{ car.cover.url }}" class="card-img-top" alt="...">
-        {% else %}
-          <img src="{% static 'img/no-img.jpg' %}" class="card-img-top">
-        {% endif %}
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">{{ car.car_model }}</h6>
-          <p class="card-text"><a href="{% url 'car' car.id %}">{{car.owner}} {{car.car_model}}</a></p>
-        </div>
-      </div>
-    {% endfor %}
-<div class="container puslapiai">
-    <nav aria-label="...">
-        {% if cars.has_other_pages %}
-            <ul class="pagination pagination-sm justify-content-end">
-                {% for i in cars.paginator.page_range %}
-                    {% if cars.number == i %}
-                        <li class="page-item active">
-                            <a class="page-link" href="">{{ i }}</a>
-                        </li>
-                    {% else %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </nav>
-</div>
+    <div style="display: flex;">
+        {% for car in cars %}
+            <div class="card mb-4 shadow-sm" style="height: 40%; width: 40%; text-align: center; margin: 10px; min-height: 495px">
+                {% if car.cover %}
+                  <img src="{{ car.cover.url }}" class="card-img-top" alt="...">
+                {% else %}
+                  <img src="{% static 'img/no-img.jpg' %}" class="card-img-top">
+                {% endif %}
+                <div class="card-body">
+                  <h6 class="card-subtitle mb-2 text-muted">{{ car.car_model }}</h6>
+                  <p class="card-text"><a href="{% url 'car' car.id %}">{{car.owner}} {{car.car_model}}</a></p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="container puslapiai">
+        <nav aria-label="...">
+            {% if cars.has_other_pages %}
+                <ul class="pagination pagination-sm justify-content-end">
+                    {% for i in cars.paginator.page_range %}
+                        {% if cars.number == i %}
+                            <li class="page-item active">
+                                <a class="page-link" href="">{{ i }}</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </nav>
+    </div>
+</section>
 {% endblock %}
