--- a/mysite/autoservice/templates/registration/password_reset_complete.html
+++ b/mysite/autoservice/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-        <h1>Password changed!</h1>
-        <p><a href="{% url 'login' %}">Login again</a></p>
+        <h1>{% trans "Password changed!" %}</h1>
+        <p><a href="{% url 'login' %}">{% trans "Login again" %}</a></p>
 {% endblock %}
