--- a/mysite/autoservice/templates/registration/password_reset_done.html
+++ b/mysite/autoservice/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
 
-        <p>Your reset password email is heading your way!</p>
+        <p>{% trans "Your reset password email is heading your way!" %}</p>
 
 {% endblock %}
