--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block title %}<title>Autoservisas</title>{% endblock %}
+  {% load i18n %}
+  {% block title %}<title>{% trans "Autoservice" %}</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -19,24 +20,24 @@
     <svg class="bi bi-wrench" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" d="M.102 2.223A3.004 3.004 0 003.78 5.897l6.341 6.252A3.003 3.003 0 0013 16a3 3 0 10-.851-5.878L5.897 3.781A3.004 3.004 0 002.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019L13 11l-.471.242-.529.026-.287.445-.445.287-.026.529L11 13l.242.471.026.529.445.287.287.445.529.026L13 15l.471-.242.529-.026.287-.445.445-.287.026-.529L15 13l-.242-.471-.026-.529-.445-.287-.287-.445-.529-.026z" clip-rule="evenodd"/>
     </svg>
-    Autoservice</a>
+    {% trans "Autoservice" %}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'index' %}">Home</a>
+          <a class="nav-link" href="{% url 'index' %}">{% trans "Home" %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'cars' %}">Cars</a>
+          <a class="nav-link" href="{% url 'cars' %}">{% trans "Cars" %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'orders' %}">Orders</a>
+          <a class="nav-link" href="{% url 'orders' %}">{% trans "Orders" %}</a>
         </li>
          <li class="nav-item">
               <form action="{% url 'search' %}" method="get" class="form-inline my-2 my-md-0">
-                <input name="query" class="form-control" type="text" placeholder="Paieška">
+                <input name="query" class="form-control" type="text" placeholder="{% blocktrans %}Search{% endblocktrans %}">
               </form>
         </li>
           {% if user.is_authenticated %}
@@ -45,13 +46,27 @@
                 <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 00.014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 00.022.004zm9.974.056v-.002.002zM8 7a2 2 0 100-4 2 2 0 000 4zm3-2a3 3 0 11-6 0 3 3 0 016 0z" clip-rule="evenodd"/>
               </svg>
             {{ user.get_username }}</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'my-orders' %}">My orders</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'new-order'%}?next=/library">New order</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'my-orders' %}">{% trans "My orders" %}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'new-order'%}?next=/autoservice">{% trans "New order" %}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">{% trans "Logout" %}</a></li>
           {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registration</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">{% trans "Login" %}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">{% trans "Registration" %}</a></li>
           {% endif %}
+      <form action="{% url 'set_language' %}" method="post">
+        {% csrf_token %}
+        <input name="next" type="hidden" value="{{ redirect_to }}"/>
+        <select name="language" onchange="this.form.submit()">
+          {% load static %}
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_available_languages as LANGUAGES %}
+          {% for lang in LANGUAGES %}
+          <option style="background-image: url({% static 'img/lt.png' %});" value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %} selected="selected" {% endif %}>
+            {{ lang.0 }}
+          </option>
+          {% endfor %}
+        </select>
+      </form>
       </ul>
     </div>
   </div>
