--- a/mysite/autoservice/templates/order_delete.html
+++ b/mysite/autoservice/templates/order_delete.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Delete order!</legend>
-            <h2>Are you sure you want to delete this order?</h2>
+            <legend class="border-bottom mb-4">{% trans "Delete order!" %}</legend>
+            <h2>{% trans "Are you sure you want to delete this order?" %}</h2>
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-danger" type="submit">Yes, delete it</button>
-            <a class="btn btn-outline-secondary" href="{% url 'my-orders' %}">Cancel</a>
+            <button class="btn btn-outline-danger" type="submit">{% trans "Yes, delete it" %}</button>
+            <a class="btn btn-outline-secondary" href="{% url 'my-orders' %}">{% trans "Cancel" %}</a>
         </div>
     </form>
     </div>
