--- a/mysite/autoservice/templates/order_form.html
+++ b/mysite/autoservice/templates/order_form.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">New order</legend>
+            <legend class="border-bottom mb-4">{% trans "New order" %}</legend>
             {{ form|crispy }}
             <br>
             <hr>
@@ -15,19 +16,8 @@
             {% endfor %}
             </div>
         </fieldset>
-<!--         <div style="margin-left:20px;margin-top:20px">-->
-<!--            <h4>Services:</h4>-->
-<!--            {% for orderline in order.lines.all %}-->
-<!--              <hr>-->
-<!--              <p class="text-muted"><strong> Service: {{ orderline.service }} ({{ orderline.service.price }}) </strong> - {{orderline.qty}}, SUM: {{orderline.line_total}}</p>-->
-<!--            {% endfor %}-->
-<!--         </div>-->
-<!--            <hr>-->
-<!--            <p>-->
-<!--                TOTAL: {{ order.total }}-->
-<!--            </p>-->
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Save</button>
+            <button class="btn btn-outline-info" type="submit">{% trans "Save" %}</button>
         </div>
     </form>
     </div>
