--- a/mysite/autoservice/templates/register.html
+++ b/mysite/autoservice/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
 
 <div>
-    <h3>Registration</h3><br/>
+    <h3>{% trans "Registration" %}</h3><br/>
     <form method="post">
         {% if messages %}
             {% for message in messages %}
@@ -14,28 +14,28 @@
         {% endif %}
         {% csrf_token %}
         <div class="form-group">
-            <label for="username">User name</label>
+            <label for="username">{% trans "User name" %}</label>
             <input name="username" type="text" class="form-control" id="username" aria-describedby="usernameHelp">
-            <small id="usernameHelp" class="form-text text-muted">Max 150 simbols.</small>
+            <small id="usernameHelp" class="form-text text-muted">{% trans "Max 150 simbols." %}</small>
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
+            <label for="exampleInputEmail1">{% trans "Email" %}</label>
             <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">Only for password reset!</small>
+            <small id="emailHelp" class="form-text text-muted">{% trans "Only for password reset!" %}</small>
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">{% trans "Password" %}</label>
             <input name="password" type="password" class="form-control" id="password" aria-describedby="pwdHelp">
-            <small id="pwdHelp" class="form-text text-muted">Minimum length is 8 characters. Must include at least one
-                letter (a–z) and one number (0–9).</small>
+            <small id="pwdHelp" class="form-text text-muted">{% blocktrans %}Minimum length is 8 characters. Must include at least one
+                letter (a–z) and one number (0–9).{% endblocktrans %}</small>
         </div>
         <div class="form-group">
-            <label for="password2">Re-Password</label>
+            <label for="password2">{% trans "Re-Password" %}</label>
             <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
         </div>
-        <button type="submit" class="btn btn-primary register-button">Confirm</button>
+        <button type="submit" class="btn btn-primary register-button">{% trans "Confirm" %}</button>
     </form>
-    <p>Already have an account? <a href="/login"><strong>Login.</strong></a></p>
+    <p>{% trans "Already have an account?" %} <a href="/login"><strong>{% trans "Login." %}</strong></a></p>
 </div>
 
 {% endblock %}
