--- a/mysite/autoservice/templates/registration/password_reset_confirm.html
+++ b/mysite/autoservice/templates/registration/password_reset_confirm.html
@@ -1,31 +1,30 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-
         {% if validlink %}
-        <p>Enter a new password and repeat it.</p>
+        <p>{% trans "Enter a new password and repeat it" %}.</p>
         <form action="" method="post">
             {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                        <label for="id_new_password1">{% trans "New password:" %}</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm:</label></td>
+                        <label for="id_new_password2">{% trans "Confirm:" %}</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="confirm"/></td>
+                    <td><input type="submit" value="{% blocktrans %}confirm{% endblocktrans %}"/></td>
                 </tr>
             </table>
         </form>
         {% else %}
-        <h1>Failed to change password</h1>
-        <p>The password reset link is invalid. Please initiate a password reset again.</p>
+        <h1>{% trans "Failed to change password" %}</h1>
+        <p>{% trans "The password reset link is invalid. Please initiate a password reset again." %}</p>
         {% endif %}
 
 {% endblock %}
