--- a/mysite/autoservice/templates/registration/password_reset_form.html
+++ b/mysite/autoservice/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
 
         <form action="" method="post">
@@ -8,7 +8,7 @@
             {{ form.email.errors }}
             {% endif %}
             <p>{{ form.email }}</p>
-            <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+            <input type="submit" class="btn btn-default btn-lg" value="{% blocktrans %}Reset password{% endblocktrans %}">
         </form>
 
 {% endblock %}
