--- a/mysite/autoservice/templates/search.html
+++ b/mysite/autoservice/templates/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-      <h1>Search results for "{{query}}" :</h1>
+      <h1>{% trans "Search results for" %} "{{query}}" :</h1>
       </br>
       {% if cars %}
       <ul>
@@ -12,6 +12,6 @@
         {% endfor %}
       </ul>
       {% else %}
-        <p>Oops. Could not find anything :(</p>
+        <p>{% trans "Oops. Could not find anything :(" %}</p>
       {% endif %}
 {% endblock %}
