--- a/mysite/autoservice/templates/user_orders.html
+++ b/mysite/autoservice/templates/user_orders.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-    <h1>My orders</h1>
+    <h1>{% trans "My orders" %}</h1>
     {% if order_list %}
      <ul>
         {% for order in order_list %}
             <li>
                 <a class="{% if order.is_overdue %}text-danger{% endif %}" href="{% url 'order-detail' order.pk %}">{{ order.car }} ({{ order.due_back }})</a>
                 {% if order.client == user %}
-                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'my-order-update' order.id %}">Update</a>
-                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'my-order-delete' order.id %}">Delete</a>
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'my-order-update' order.id %}">{% trans "Update" %}</a>
+                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'my-order-delete' order.id %}">{% trans "Delete" %}</a>
                 {% endif %}
             </li>
         {% endfor %}
       </ul>
     {% else %}
-      <p>At this time, you don't have any orders!</p>
+      <p>{% trans "At this time, you don't have any orders!" %}</p>
     {% endif %}
 {% endblock %}
